--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo "installing nodejs..."
-      - curl -fsSL https://deb.nodesource.com/setup_16.x | bash - # This install the latest Node.js 16.x version
+      - curl -fsSL https://deb.nodesource.com/setup_16.x | bash - # This installs the latest Node.js 16.x version
       - sudo apt-get install -y nodejs
   pre_build:
     commands:
